kustomize/keycloak/ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mako-ingress-ip"
    networking.gke.io/managed-certificates: "mako-bank-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: keycloak.mako-bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
