kustomize/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mako-ingress-ip-global"
    networking.gke.io/managed-certificates: "mako-bank-ssl-cert"
    networking.gke.io/v1beta1.FrontendConfig: "mako-frontend-http-to-https"
spec:
  rules:
    - host: keycloak.mako-bank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
